--- a/wvc/256x256/NLM_PoissonAscombe.ipynb
+++ b/wvc/256x256/NLM_PoissonAscombe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "61ee3d25",
    "metadata": {},
    "outputs": [],
@@ -241,12 +241,13 @@
     "##################################################\n",
     "def Parallel_GEONLM(img_n, f, t, h, nn):\n",
     "    # Parallelize the loop\n",
+    "    print(f'img_n.shape: {img_n.shape}')\n",
     "    m = img_n.shape[0] - 2*f\n",
     "    print(f'M: {m}')\n",
     "    n = img_n.shape[1] - 2*f\n",
     "    print(f'N: {n}')\n",
     "    filtrada = Parallel(n_jobs=-1)(delayed(process_pixel)(i, j, img_n, f, t, h, nn) for i in range(m) for j in range(n))\n",
-    "    print(f\"filtrada Shape: {filtrada.shape}\")\n",
+    "    #print(f\"filtrada Shape: {filtrada.shape}\")\n",
     "    \n",
     "    filtrada_geo = np.array(filtrada).reshape((m, n))\n",
     "    #print(f'filtrada_geo.shape: {filtrada_geo.shape}')\n",
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "851715f6",
    "metadata": {},
    "outputs": [],
@@ -437,27 +438,36 @@
     "\n",
     "def add_poisson_noise(img):\n",
     "    \"\"\"\n",
-    "    Aplica ruído de Poisson a uma imagem.\n",
+    "    Aplica ruído de Poisson corretamente sem overflow.\n",
     "\n",
     "    Parâmetros:\n",
-    "        imagem (np.ndarray): imagem original (grayscale ou RGB), valores normalizados entre 0 e 1 ou em 0-255.\n",
+    "        img (np.ndarray): Imagem com valores em [0,255] ou [0,1].\n",
     "\n",
     "    Retorna:\n",
-    "        np.ndarray: imagem com ruído de Poisson.\n",
+    "        np.ndarray: imagem ruidosa, clipada para [0, 255], dtype uint8.\n",
     "    \"\"\"\n",
     "    # Se estiver em [0, 1], escala para 0-255\n",
     "    if img.max() <= 1.0:\n",
-    "        img = (img * 255).astype(np.uint8)\n",
-    "    \n",
-    "    # Aplica o ruído de Poisson\n",
-    "    img_noise = np.random.poisson(img).astype(np.uint8)\n",
+    "        img = (img * 255).astype(np.float32)\n",
+    "    else:\n",
+    "        img = img.astype(np.float32)\n",
     "\n",
-    "    return img_noise"
+    "    # Garante que os valores Poisson não causem overflow\n",
+    "    poisson_img = np.random.poisson(img).astype(np.float32)\n",
+    "    poisson_img = np.clip(poisson_img, 0, 255)\n",
+    "\n",
+    "    return poisson_img.astype(np.uint8)\n",
+    "\n",
+    "def anscombe_transform(img):\n",
+    "    return 2.0 * np.sqrt(img.astype(np.float32) + 3.0 / 8.0)\n",
+    "\n",
+    "def inverse_anscombe(transf_img):\n",
+    "    return np.clip((transf_img / 2.0) ** 2 - 3.0 / 8.0, 0, 255)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "7e6d616c",
    "metadata": {},
    "outputs": [
@@ -472,28 +482,25 @@
       "*            NLM                  *\n",
       "***********************************\n",
       "\n",
-      "PSNR (NLM padrão): 31.891169\n",
-      "SSIM (NLM padrão): 0.901122\n",
-      "Elapsed time (NLM): 10.632848 s\n",
+      "ruidosa_asc_nlm.shape: (256, 256)\n",
+      "filtrada_asc.shape: (256, 256)\n",
+      "filtrada_padrao.shape: (256, 256)\n",
+      "PSNR (NLM padrão): 22.125598\n",
+      "SSIM (NLM padrão): 0.589674\n",
+      "Elapsed time (NLM): 2.081685 s\n",
       "\n",
       "***********************************\n",
       "*            GEONLM               *\n",
       "***********************************\n",
       "\n",
+      "img_n.shape: (264, 264)\n",
       "M: 256\n",
-      "N: 256\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 105\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m##3 Versão com JIT compiler\u001b[39;00m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;66;03m#filtrada_geo = GeoNLM_filter(ruidosa, h_geo, f, t, nn)   # versão com JIT compiler (não ficou mais rápido pois o Dijkstra não acelera. Ainda está lento...)\u001b[39;00m\n\u001b[0;32m    102\u001b[0m \n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m### Versão com paralelismo (ficou mais rápida)\u001b[39;00m\n\u001b[0;32m    104\u001b[0m img_n \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mpad(ruidosa, ((f, f), (f, f)), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msymmetric\u001b[39m\u001b[38;5;124m'\u001b[39m)      \u001b[38;5;66;03m# para versão paralela, precisa espelhar imagem fora da função\u001b[39;00m\n\u001b[1;32m--> 105\u001b[0m filtrada_geo \u001b[38;5;241m=\u001b[39m \u001b[43mParallel_GEONLM\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_n\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh_geo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    107\u001b[0m end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m    108\u001b[0m \u001b[38;5;66;03m# Calcula PSNR\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[1], line 240\u001b[0m, in \u001b[0;36mParallel_GEONLM\u001b[1;34m(img_n, f, t, h, nn)\u001b[0m\n\u001b[0;32m    238\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mN: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    239\u001b[0m filtrada \u001b[38;5;241m=\u001b[39m Parallel(n_jobs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)(delayed(process_pixel)(i, j, img_n, f, t, h, nn) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(m) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n))\n\u001b[1;32m--> 240\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfiltrada Shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfiltrada\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    242\u001b[0m filtrada_geo \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(filtrada)\u001b[38;5;241m.\u001b[39mreshape((m, n))\n\u001b[0;32m    243\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfiltrada_geo.shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfiltrada_geo\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+      "N: 256\n",
+      "\n",
+      "PSNR (GEO NLM): 23.649854\n",
+      "SSIM (GEO NLM): 0.666170\n",
+      "Total Elapsed time (GEONLM): 57.834946 s\n",
+      "\n"
      ]
     }
    ],
@@ -506,8 +513,8 @@
     "\n",
     "\n",
     "dir_images = f'{root_dir}/wvc/images'\n",
-    "dir_out_nlm = f'{root_dir}/wvc/out_put_NLM_Poisson'\n",
-    "dir_out_geonlm = f'{root_dir}/wvc/out_put_GEONLM_Poisson'\n",
+    "dir_out_nlm = f'{root_dir}/wvc/256x256/out_put_NLM_PoissonAscombe'\n",
+    "dir_out_geonlm = f'{root_dir}/wvc/256x256/out_put_GEONLM_PoissonAscombe'\n",
     "\n",
     "array_dir = read_directories(dir_images)\n",
     "\n",
@@ -518,118 +525,158 @@
     "ssims_geonlm = []\n",
     "array_dicts = []\n",
     "\n",
-    "for file in array_dir:\n",
+    "# for file in array_dir:\n",
     "\n",
-    "    file_name = file\n",
-    "    img = skimage.io.imread(f'{dir_images}/{file_name}')\n",
-    "    # Em arquivos de formato GIF precisa desse comando\n",
-    "    img = img[0, :, :]\n",
+    "file_name = '0.gif'\n",
+    "img = skimage.io.imread(f'{dir_images}/{file_name}')\n",
+    "# Em arquivos de formato GIF precisa desse comando\n",
+    "img = img[0, :, :]\n",
     "\n",
-    "    # Checa se imagem é monocromática\n",
-    "    if len(img.shape) > 2:\n",
-    "        img = skimage.color.rgb2gray(img)   # valores convertidos ficam entre 0 e 1\n",
-    "        img = 255*img\n",
+    "# Checa se imagem é monocromática\n",
+    "if len(img.shape) > 2:\n",
+    "    img = skimage.color.rgb2gray(img)   # valores convertidos ficam entre 0 e 1\n",
+    "    img = 255*img\n",
     "\n",
-    "    # Reescala imagem para (256, 256) - diminuir o tempo de execução\n",
-    "    img = downscale_local_mean(img, (2, 2))\n",
+    "# Reescala imagem para (256, 256) - diminuir o tempo de execução\n",
+    "img = downscale_local_mean(img, (2, 2))\n",
     "\n",
-    "    img = img.astype(np.uint8)              # Converte para uint8    \n",
-    "    m, n = img.shape\n",
+    "img = img.astype(np.uint8)              # Converte para uint8    \n",
+    "m, n = img.shape\n",
     "\n",
-    "    print('Num. linhas = %d' %m)\n",
-    "    print('Num. colunas = %d' %n)\n",
-    "    print()\n",
+    "print('Num. linhas = %d' %m)\n",
+    "print('Num. colunas = %d' %n)\n",
+    "print()\n",
     "\n",
-    "    # Cria imagem ruidosa\n",
-    "    ruidosa = add_poisson_noise(img)\n",
+    "# Cria imagem ruidosa\n",
+    "ruidosa = add_poisson_noise(img)\n",
     "\n",
-    "    # Clipa imagem para intervalo [0, 255]\n",
-    "    ruidosa[np.where(ruidosa > 255)] = 255\n",
-    "    ruidosa[np.where(ruidosa < 0)] = 0\n",
-    "    #ruidosa = ruidosa.astype(np.float32)\n",
+    "# Clipa imagem para intervalo [0, 255]\n",
+    "ruidosa[np.where(ruidosa > 255)] = 255\n",
+    "ruidosa[np.where(ruidosa < 0)] = 0\n",
+    "#ruidosa = ruidosa.astype(np.float32)\n",
     "\n",
-    "    # Listas para métricas\n",
+    "# Listas para métricas\n",
     "\n",
     "\n",
-    "    # Define parâmetros do filtro NLM\n",
-    "    f = 4   # tamanho do patch (2f + 1 x 2f + 1) -> 5 x 5\n",
-    "    t = 7   # tamanho da janela de busca (2t + 1 x 2t + 1) -> 21 x 21\n",
-    "    h_nlm = 110 # parâmetro que controla a suavização no NLM (depende da imagem)\n",
-    "    h_geo = 150 # parâmetro que controla a suavização no GEONLM (depende da imagem)\n",
-    "    nn = 10     # número de vizinhos no grafo k-NN\n",
+    "# Define parâmetros do filtro NLM\n",
+    "f = 4   # tamanho do patch (2f + 1 x 2f + 1) -> 5 x 5\n",
+    "t = 7   # tamanho da janela de busca (2t + 1 x 2t + 1) -> 21 x 21\n",
+    "h_nlm = 110 # parâmetro que controla a suavização no NLM (depende da imagem)\n",
+    "h_geo = 150 # parâmetro que controla a suavização no GEONLM (depende da imagem)\n",
+    "nn = 10     # número de vizinhos no grafo k-NN\n",
     "\n",
-    "    # Cria imagem de saída\n",
-    "    filtrada = np.zeros((m, n))\n",
+    "# Cria imagem de saída\n",
+    "filtrada = np.zeros((m, n))\n",
     "\n",
-    "    # Problema de valor de contorno: replicar bordas\n",
-    "    img_n = np.pad(ruidosa, ((f, f), (f, f)), 'symmetric')\n",
+    "# Problema de valor de contorno: replicar bordas\n",
+    "img_n = np.pad(ruidosa, ((f, f), (f, f)), 'symmetric')\n",
     "\n",
-    "    ###################################################\n",
-    "    # Filtra com NLM padrão\n",
-    "    ###################################################\n",
-    "    print('***********************************')\n",
-    "    print('*            NLM                  *')\n",
-    "    print('***********************************')\n",
-    "    print()\n",
-    "    inicio = time.time()\n",
-    "    filtrada_padrao = NLM_fast(ruidosa, h_nlm, f, t)\n",
-    "    fim = time.time()    \n",
-    "    # Calcula PSNR\n",
-    "    p1 = peak_signal_noise_ratio(img, filtrada_padrao.astype(np.uint8))\n",
-    "    psnrs_nlm.append(p1)\n",
-    "    print('PSNR (NLM padrão): %f' %p1)\n",
-    "    # Calcula SSIM\n",
-    "    s1 = structural_similarity(img, filtrada_padrao.astype(np.uint8))\n",
-    "    ssims_nlm.append(s1)\n",
-    "    print('SSIM (NLM padrão): %f' %s1)\n",
-    "    print('Elapsed time (NLM): %f s' %(fim - inicio))\n",
-    "    print()\n",
-    "    time_nlm = fim - inicio\n",
-    "    # Salva arquivo\n",
-    "    #skimage.io.imsave(f'{dir_out_nlm}/{file_name}', filtrada_padrao.astype(np.uint8))\n",
+    "###################################################\n",
+    "# Filtra com NLM padrão\n",
+    "###################################################\n",
+    "print('***********************************')\n",
+    "print('*            NLM                  *')\n",
+    "print('***********************************')\n",
+    "print()\n",
+    "inicio = time.time()\n",
+    "#ruidosa_asc = np.pad(ruidosa, ((f, f), (f, f)), 'symmetric')      # para versão paralela, precisa espelhar imagem fora da função\n",
     "\n",
-    "    ###################################################\n",
-    "    # Filtra com NLM geodésico\n",
-    "    ###################################################\n",
-    "    print('***********************************')\n",
-    "    print('*            GEONLM               *')\n",
-    "    print('***********************************')\n",
-    "    print()\n",
-    "    ini = time.time()\n",
     "\n",
-    "    ##3 Versão com JIT compiler\n",
-    "    #filtrada_geo = GeoNLM_filter(ruidosa, h_geo, f, t, nn)   # versão com JIT compiler (não ficou mais rápido pois o Dijkstra não acelera. Ainda está lento...)\n",
+    "ruidosa_asc_nlm = anscombe_transform(ruidosa)\n",
+    "print(f'ruidosa_asc_nlm.shape: {ruidosa_asc_nlm.shape}')\n",
+    "filtrada_asc = NLM_fast(ruidosa_asc_nlm, h_nlm, f, t)\n",
+    "print(f'filtrada_asc.shape: {filtrada_asc.shape}')\n",
+    "filtrada_padrao = inverse_anscombe(filtrada_asc).astype(np.uint8)\n",
+    "print(f'filtrada_padrao.shape: {filtrada_padrao.shape}')\n",
     "\n",
-    "    ### Versão com paralelismo (ficou mais rápida)\n",
-    "    img_n = np.pad(ruidosa, ((f, f), (f, f)), 'symmetric')      # para versão paralela, precisa espelhar imagem fora da função\n",
-    "    filtrada_geo = Parallel_GEONLM(img_n, f, t, h_geo, nn)\n",
+    "fim = time.time()    \n",
+    "# Calcula PSNR\n",
+    "p1 = peak_signal_noise_ratio(img, filtrada_padrao.astype(np.uint8))\n",
+    "psnrs_nlm.append(p1)\n",
+    "print('PSNR (NLM padrão): %f' %p1)\n",
+    "# Calcula SSIM\n",
+    "s1 = structural_similarity(img, filtrada_padrao.astype(np.uint8))\n",
+    "ssims_nlm.append(s1)\n",
+    "print('SSIM (NLM padrão): %f' %s1)\n",
+    "print('Elapsed time (NLM): %f s' %(fim - inicio))\n",
+    "print()\n",
+    "time_nlm = fim - inicio\n",
+    "# Salva arquivo\n",
+    "skimage.io.imsave(f'{dir_out_nlm}/{file_name}', filtrada_padrao.astype(np.uint8))\n",
     "\n",
-    "    end = time.time()\n",
-    "    # Calcula PSNR\n",
-    "    p2 = peak_signal_noise_ratio(img, filtrada_geo.astype(np.uint8))\n",
-    "    psnrs_nlm.append(p2)\n",
-    "    print('\\nPSNR (GEO NLM): %f' %p2)\n",
-    "    # Calcula SSIM\n",
-    "    s2 = structural_similarity(img, filtrada_geo.astype(np.uint8))\n",
-    "    ssims_nlm.append(s2)\n",
-    "    print('SSIM (GEO NLM): %f' %s2)\n",
-    "    print('Total Elapsed time (GEONLM): %f s' %(end - ini))\n",
+    "###################################################\n",
+    "# Filtra com NLM geodésico\n",
+    "###################################################\n",
+    "print('***********************************')\n",
+    "print('*            GEONLM               *')\n",
+    "print('***********************************')\n",
+    "print()\n",
+    "ini = time.time()\n",
     "\n",
-    "    time_geonlm = end - ini\n",
-    "    print()\n",
-    "    # Salva arquivo    \n",
-    "    #skimage.io.imsave(f'{dir_out_geonlm}/{file_name}', filtrada_geo.astype(np.uint8))\n",
+    "##3 Versão com JIT compiler\n",
+    "#filtrada_geo = GeoNLM_filter(ruidosa, h_geo, f, t, nn)   # versão com JIT compiler (não ficou mais rápido pois o Dijkstra não acelera. Ainda está lento...)\n",
     "\n",
-    "    dict = {\n",
-    "        's1': s1,\n",
-    "        'p1': p1,\n",
-    "        's2': s2,\n",
-    "        'p2': p2,\n",
-    "        'time_nlm':time_nlm,\n",
-    "        'time_geonlm':time_geonlm,\n",
-    "        'image': file_name   \n",
-    "    }\n",
-    "    array_dicts.append(dict)"
+    "### Versão com paralelismo (ficou mais rápida)\n",
+    "img_n_geo = np.pad(ruidosa, ((f, f), (f, f)), 'symmetric')      # para versão paralela, precisa espelhar imagem fora da função\n",
+    "\n",
+    "ruidosa_asc_geo = anscombe_transform(img_n_geo)\n",
+    "filtrada_geo_asc = Parallel_GEONLM(ruidosa_asc_geo, f, t, h_geo, nn)\n",
+    "\n",
+    "filtrada_geo = inverse_anscombe(filtrada_geo_asc).astype(np.uint8)\n",
+    "\n",
+    "end = time.time()\n",
+    "# Calcula PSNR\n",
+    "p2 = peak_signal_noise_ratio(img, filtrada_geo.astype(np.uint8))\n",
+    "psnrs_nlm.append(p2)\n",
+    "print('\\nPSNR (GEO NLM): %f' %p2)\n",
+    "# Calcula SSIM\n",
+    "s2 = structural_similarity(img, filtrada_geo.astype(np.uint8))\n",
+    "ssims_nlm.append(s2)\n",
+    "print('SSIM (GEO NLM): %f' %s2)\n",
+    "print('Total Elapsed time (GEONLM): %f s' %(end - ini))\n",
+    "\n",
+    "time_geonlm = end - ini\n",
+    "print()\n",
+    "# Salva arquivo    \n",
+    "skimage.io.imsave(f'{dir_out_geonlm}/{file_name}', filtrada_geo.astype(np.uint8))\n",
+    "\n",
+    "dict = {\n",
+    "    's1': s1,\n",
+    "    'p1': p1,\n",
+    "    's2': s2,\n",
+    "    'p2': p2,\n",
+    "    'time_nlm':time_nlm,\n",
+    "    'time_geonlm':time_geonlm,\n",
+    "    'image': file_name   \n",
+    "}\n",
+    "array_dicts.append(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3b5477a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'s1': np.float64(0.589736212355982),\n",
+       "  'p1': np.float64(22.11313638517598),\n",
+       "  's2': np.float64(0.6664154818701162),\n",
+       "  'p2': np.float64(23.641680220516296),\n",
+       "  'time_nlm': 11.167252779006958,\n",
+       "  'time_geonlm': 54.42556309700012,\n",
+       "  'image': '0.gif'}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_dicts"
    ]
   },
   {
