--- a/wvc/512x512/NLM_PoissonGaussianAscombe.ipynb
+++ b/wvc/512x512/NLM_PoissonGaussianAscombe.ipynb
@@ -1871,6 +1871,120 @@
       "\n",
       "img_n.shape: (520, 520)\n",
       "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 27.668490\n",
+      "SSIM (GEO NLM): 0.581119\n",
+      "Total Elapsed time (GEONLM): 251.329193 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 30.507953\n",
+      "SSIM (BM3D): 0.770890\n",
+      "Total Elapsed time (BM3D): 3.752983 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.60 | q_nlm = 10.23 | h_nlm = 26.62\n",
+      "[INFO]                 q_geo = 11.88 | h_geo = 30.90\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 25.568978\n",
+      "SSIM (NLM padrão): 0.643689\n",
+      "Elapsed time (NLM): 8.624513 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.334818\n",
+      "SSIM (GEO NLM): 0.669789\n",
+      "Total Elapsed time (GEONLM): 260.791997 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.900040\n",
+      "SSIM (BM3D): 0.772602\n",
+      "Total Elapsed time (BM3D): 4.188748 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.83 | q_nlm = 10.49 | h_nlm = 29.66\n",
+      "[INFO]                 q_geo = 12.24 | h_geo = 34.59\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 25.168806\n",
+      "SSIM (NLM padrão): 0.661461\n",
+      "Elapsed time (NLM): 8.737130 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.244028\n",
+      "SSIM (GEO NLM): 0.662457\n",
+      "Total Elapsed time (GEONLM): 255.620946 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.623050\n",
+      "SSIM (BM3D): 0.754222\n",
+      "Total Elapsed time (BM3D): 2.944668 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 3.16 | q_nlm = 10.86 | h_nlm = 34.35\n",
+      "[INFO]                 q_geo = 12.76 | h_geo = 40.36\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 24.889804\n",
+      "SSIM (NLM padrão): 0.702747\n",
+      "Elapsed time (NLM): 8.335022 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
       "N: 512\n"
      ]
     }
