--- a/wvc/512x512/NLM_PoissonGaussianAscombe.ipynb
+++ b/wvc/512x512/NLM_PoissonGaussianAscombe.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7e6d616c",
    "metadata": {},
    "outputs": [
@@ -1985,7 +1985,438 @@
       "\n",
       "img_n.shape: (520, 520)\n",
       "M: 512\n",
-      "N: 512\n"
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.078617\n",
+      "SSIM (GEO NLM): 0.641819\n",
+      "Total Elapsed time (GEONLM): 253.109758 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.714922\n",
+      "SSIM (BM3D): 0.767802\n",
+      "Total Elapsed time (BM3D): 4.100049 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 3.18 | q_nlm = 10.87 | h_nlm = 34.55\n",
+      "[INFO]                 q_geo = 12.78 | h_geo = 40.60\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 17.547228\n",
+      "SSIM (NLM padrão): 0.386428\n",
+      "Elapsed time (NLM): 8.566427 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 19.797498\n",
+      "SSIM (GEO NLM): 0.668186\n",
+      "Total Elapsed time (GEONLM): 248.604092 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 20.031722\n",
+      "SSIM (BM3D): 0.658598\n",
+      "Total Elapsed time (BM3D): 2.707595 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.71 | q_nlm = 10.36 | h_nlm = 28.10\n",
+      "[INFO]                 q_geo = 12.06 | h_geo = 32.69\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 25.729629\n",
+      "SSIM (NLM padrão): 0.709574\n",
+      "Elapsed time (NLM): 8.523760 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 25.828898\n",
+      "SSIM (GEO NLM): 0.685008\n",
+      "Total Elapsed time (GEONLM): 248.673015 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.019199\n",
+      "SSIM (BM3D): 0.760291\n",
+      "Total Elapsed time (BM3D): 2.674619 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.84 | q_nlm = 10.51 | h_nlm = 29.81\n",
+      "[INFO]                 q_geo = 12.26 | h_geo = 34.77\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 23.088332\n",
+      "SSIM (NLM padrão): 0.547995\n",
+      "Elapsed time (NLM): 8.653263 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 24.326269\n",
+      "SSIM (GEO NLM): 0.667392\n",
+      "Total Elapsed time (GEONLM): 248.802247 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 25.006410\n",
+      "SSIM (BM3D): 0.713871\n",
+      "Total Elapsed time (BM3D): 2.646502 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.73 | q_nlm = 10.39 | h_nlm = 28.38\n",
+      "[INFO]                 q_geo = 12.09 | h_geo = 33.04\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 22.417582\n",
+      "SSIM (NLM padrão): 0.538470\n",
+      "Elapsed time (NLM): 8.471800 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 24.010876\n",
+      "SSIM (GEO NLM): 0.689648\n",
+      "Total Elapsed time (GEONLM): 245.750659 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 24.529675\n",
+      "SSIM (BM3D): 0.722574\n",
+      "Total Elapsed time (BM3D): 3.082425 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.52 | q_nlm = 10.13 | h_nlm = 25.52\n",
+      "[INFO]                 q_geo = 11.75 | h_geo = 29.58\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 26.139364\n",
+      "SSIM (NLM padrão): 0.684516\n",
+      "Elapsed time (NLM): 8.522406 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.411118\n",
+      "SSIM (GEO NLM): 0.654110\n",
+      "Total Elapsed time (GEONLM): 245.480400 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.720842\n",
+      "SSIM (BM3D): 0.768116\n",
+      "Total Elapsed time (BM3D): 2.649058 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.20 | q_nlm = 9.73 | h_nlm = 21.46\n",
+      "[INFO]                 q_geo = 11.22 | h_geo = 24.74\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 23.573245\n",
+      "SSIM (NLM padrão): 0.835873\n",
+      "Elapsed time (NLM): 8.558648 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 23.273561\n",
+      "SSIM (GEO NLM): 0.726819\n",
+      "Total Elapsed time (GEONLM): 247.746391 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 25.198460\n",
+      "SSIM (BM3D): 0.907699\n",
+      "Total Elapsed time (BM3D): 2.841382 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.90 | q_nlm = 10.57 | h_nlm = 30.61\n",
+      "[INFO]                 q_geo = 12.35 | h_geo = 35.75\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 26.320069\n",
+      "SSIM (NLM padrão): 0.615382\n",
+      "Elapsed time (NLM): 8.516932 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.639463\n",
+      "SSIM (GEO NLM): 0.635113\n",
+      "Total Elapsed time (GEONLM): 247.133421 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 28.085142\n",
+      "SSIM (BM3D): 0.742594\n",
+      "Total Elapsed time (BM3D): 2.829216 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 3.41 | q_nlm = 11.10 | h_nlm = 37.89\n",
+      "[INFO]                 q_geo = 13.12 | h_geo = 44.78\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 24.393859\n",
+      "SSIM (NLM padrão): 0.653245\n",
+      "Elapsed time (NLM): 8.497158 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.280614\n",
+      "SSIM (GEO NLM): 0.714159\n",
+      "Total Elapsed time (GEONLM): 246.654541 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.300955\n",
+      "SSIM (BM3D): 0.803666\n",
+      "Total Elapsed time (BM3D): 2.789683 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.30 | q_nlm = 9.85 | h_nlm = 22.65\n",
+      "[INFO]                 q_geo = 11.38 | h_geo = 26.15\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 24.192652\n",
+      "SSIM (NLM padrão): 0.714170\n",
+      "Elapsed time (NLM): 8.465306 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 24.660995\n",
+      "SSIM (GEO NLM): 0.731095\n",
+      "Total Elapsed time (GEONLM): 244.006826 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 25.872056\n",
+      "SSIM (BM3D): 0.778341\n",
+      "Total Elapsed time (BM3D): 2.611398 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 3.69 | q_nlm = 11.34 | h_nlm = 41.77\n",
+      "[INFO]                 q_geo = 13.48 | h_geo = 49.69\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 25.817830\n",
+      "SSIM (NLM padrão): 0.634966\n",
+      "Elapsed time (NLM): 8.464919 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 26.761726\n",
+      "SSIM (GEO NLM): 0.574496\n",
+      "Total Elapsed time (GEONLM): 246.457922 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 27.709063\n",
+      "SSIM (BM3D): 0.662827\n",
+      "Total Elapsed time (BM3D): 2.704599 s\n",
+      "Num. linhas = 512\n",
+      "Num. colunas = 512\n",
+      "\n",
+      "***********************************\n",
+      "*         Parâmetro H             *\n",
+      "***********************************\n",
+      "[INFO] σ estimado: 2.88 | q_nlm = 10.56 | h_nlm = 30.45\n",
+      "[INFO]                 q_geo = 12.33 | h_geo = 35.56\n",
+      "***********************************\n",
+      "*            NLM                  *\n",
+      "***********************************\n",
+      "\n",
+      "filtrada_asc.shape: (512, 512)\n",
+      "filtrada_padrao.shape: (512, 512)\n",
+      "PSNR (NLM padrão): 23.893065\n",
+      "SSIM (NLM padrão): 0.655270\n",
+      "Elapsed time (NLM): 8.478902 s\n",
+      "\n",
+      "***********************************\n",
+      "*            GEONLM               *\n",
+      "***********************************\n",
+      "\n",
+      "img_n.shape: (520, 520)\n",
+      "M: 512\n",
+      "N: 512\n",
+      "\n",
+      "PSNR (GEO NLM): 25.034436\n",
+      "SSIM (GEO NLM): 0.637043\n",
+      "Total Elapsed time (GEONLM): 246.101594 s\n",
+      "\n",
+      "***********************************\n",
+      "*            BM3D                 *\n",
+      "***********************************\n",
+      "\n",
+      "\n",
+      "PSNR (BM3D): 26.024466\n",
+      "SSIM (BM3D): 0.772866\n",
+      "Total Elapsed time (BM3D): 2.703250 s\n"
      ]
     }
    ],
@@ -2194,7 +2625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "314fe3f9",
    "metadata": {},
    "outputs": [],
@@ -2216,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "21e93def",
    "metadata": {},
    "outputs": [
